<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.example</groupId>
	<artifactId>lakhaninashita-homework1</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>lakhaninashita-homework1</name>
	<description>Demo project for Spring Boot</description>
        <properties>
		<java.version>22</java.version>
                <start-class>com.example.lakhaninashitahomework1.Lakhaninashitahomework1</start-class>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

                <dependency>
	  <groupId>com.yanzhenjie.andserver</groupId>
	  <artifactId>annotation</artifactId>
	  <version>2.1.12</version>
	  <type>jar</type>
	 </dependency>
	 <dependency>
	  <groupId>org.springframework.boot</groupId>
	  <artifactId>spring-boot-test</artifactId>
	  <scope>test</scope>
	  <type>jar</type>
	 </dependency>
	 <dependency>
	  <groupId>org.junit.jupiter</groupId>
	  <artifactId>junit-jupiter-api</artifactId>
	  <scope>test</scope>
	  <type>jar</type>
	 </dependency>
         <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
           
        </dependency>

        <!-- Hibernate Validator (implementation of Jakarta EE validation) -->
        <!-- Added dependency below -->
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
            
        </dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<image>
						<builder>paketobuildpacks/builder-jammy-base:latest</builder>
					</image>
				</configuration>
			</plugin>
		 <plugin>
		  <groupId>org.apache.maven.plugins</groupId>
		  <artifactId>maven-compiler-plugin</artifactId>
		  <version>3.11.0</version>
		  <configuration>
		   <compilerArgs>
		    <arg>--enable-preview</arg>
		   </compilerArgs>
		  </configuration>
		 </plugin>
		</plugins>
	</build>

</project>
